# Smart-City-Heatmap

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.prod.yml  docker-compose.yml  test-pipeline.sh
backend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py
backend/app/core/: auth.py  config.py
backend/app/schemas/: auth.py
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  nginx.conf  nginx.default.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/custom/: Dashboard.tsx  LanguageToggle.tsx  ToggleSwitch.tsx
frontend/src/components/custom/filter/: FilterSection.tsx  InputSearch.tsx  MultiSelect.tsx
frontend/src/components/custom/globe/: Globe.tsx
frontend/src/components/custom/header/: HeaderActions.tsx  Headers.tsx  Logo.tsx  NavBar.tsx  UserAvatar.tsx
frontend/src/components/custom/map/: ClusterMarker.tsx  CustomMarker.css  CustomMarker.tsx  CustomPin.css  CustomPin.tsx  CustomPopup.css  CustomPopup.tsx  HeatmapLayer.tsx  Map.tsx  MapUpdater.tsx  PopupContent.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  checkbox.tsx  form.tsx  input.tsx  label.tsx  popover.tsx  scroll-area.tsx  switch.tsx
frontend/src/const/: filters.tsx
frontend/src/language/translations/en/: credits.ts  filter.ts  general.ts  index.ts  (+3 more)
frontend/src/lib/: api.ts  auth.ts  helper.tsx
frontend/src/pages/: InstructionPage.tsx  Login.tsx  MapPage.tsx
frontend/src/utils/: i18n.ts  popupDecider.ts  types.ts  useLocation.tsx
(+6 files in other folders)
