[project]
name = "smart-city-heatmap-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gotrue",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "supabase>=2.7.4",
    "fastapi[standard]>=0.112.2",
]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "mypy>=1.13.0",
    "pytest>=8.3.2",
    "httpx>=0.28.1",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.pytest.ini_options]
addopts = "-rXs --strict-config --strict-markers --tb=short"
xfail_strict = true
pythonpath = "app"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 2

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Allow raising exceptions without from e, for HTTPException
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
]

isort = { combine-as-imports = true, split-on-trailing-comma = false }

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

